<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.xspec</groupId>
  <artifactId>xspec</artifactId>
  <version>2.1-SNAPSHOT</version>

  <name>XSpec implementation</name>
  <description>A unit test framework for XSLT, XQuery and Schematron</description>
  <inceptionYear>2008</inceptionYear>
  <url>https://github.com/xspec/xspec</url>

  <licenses>
    <license>
      <name>The MIT License</name>
      <distribution>repo | manually</distribution>
      <url>https://opensource.org/licenses/MIT</url>
      <comments>Copyright (c) 2008-2019 Jeni Tennison</comments>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Jeni Tennison</name>
      <email>jeni@jenitennison.com</email>
      <roles>
        <role>creator</role>
      </roles>
    </developer>
    <developer>
      <name>Sandro Cirulli</name>
      <email>xspec@sandrocirulli.net</email>
      <roles>
        <role>current maintainer</role>
      </roles>
    </developer>
    <developer>
      <name>AirQuick</name>
      <roles>
        <role>current maintainer</role>
      </roles>
    </developer>
    <developer>
      <name>Florent George</name>
      <email>fgeorges@fgeorges.org</email>
      <roles>
        <role>former maintainer</role>
      </roles>
    </developer>
    <developer>
      <name>Christophe Marchand</name>
      <email>christophe@marchand.top</email>
      <roles>
        <role>maven maintainer</role>
      </roles>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://github.com/xspec/xspec.git</connection>
    <developerConnection>scm:git:https://github.com/xspec/xspec.git</developerConnection>
    <url>scm:git:https://github.com/xspec/xspec.git</url>
    <tag>HEAD</tag>
  </scm>

  <distributionManagement>
    <snapshotRepository>
      <id>xspec-io.ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>xspec-io.ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <xspec.resources.target.root>io/xspec/xspec/impl</xspec.resources.target.root>
  </properties>

  <dependencies>
    <dependency>
      <groupId>net.sf.saxon</groupId>
      <artifactId>Saxon-HE</artifactId>
      <version>9.9.1-8</version>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>java</sourceDirectory>

    <resources>
      <resource>
        <directory>java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
      <resource>
        <targetPath>${xspec.resources.target.root}/lib</targetPath>
        <directory>lib</directory>
      </resource>
      <resource>
        <targetPath>${xspec.resources.target.root}/src</targetPath>
        <directory>src</directory>
        <excludes>
          <exclude>harnesses/**</exclude>
        </excludes>
      </resource>
    </resources>

    <!-- Note: If any plugin is used in multiple places including a child POM, its version and
      possibly its configuration should be centralized in <pluginManagement />. -->

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.2.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>8</source>
          <target>8</target>
          <skipMain>true</skipMain>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.code54.mojo</groupId>
        <artifactId>buildversion-plugin</artifactId>
        <version>1.0.3</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>set-properties</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Automatic-Module-Name>io.xspec.xspec.impl</Automatic-Module-Name>
              <Build-Tag>${build-tag}</Build-Tag>
              <Git-Commit>${build-commit}</Git-Commit>
              <Git-Commit-Abbrev>${build-commit-abbrev}</Git-Commit-Abbrev>
              <Build-Version>${build-version}</Build-Version>
              <Build-Timestamp>${build-tstamp}</Build-Timestamp>
              <Source-Repository>${project.scm.connection}</Source-Repository>
              <Description>${project.description}</Description>
              <Website>${project.url}</Website>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <descriptors>
            <descriptor>assembly/enduser-files.xml</descriptor>
          </descriptors>
        </configuration>
        <executions>
          <execution>
            <id>enduser-files</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.2.1</version>
            <configuration>
              <excludeResources>true</excludeResources>
              <excludes>
                <exclude>**/*.class</exclude>
              </excludes>
            </configuration>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
              <execution>
                <id>attach-javadoc</id>
                <goals>
                  <goal>jar</goal>
                </goals>
                <configuration>
                  <source>8</source>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
                <configuration>
                  <!--
                    Prevent `gpg` from using pinentry programs
                    https://github.com/samuelmeuli/action-maven-publish/issues/1#issuecomment-555756718
                    https://github.com/samuelmeuli/action-maven-publish/issues/10#issuecomment-589245121
                  -->
                  <gpgArguments>
                    <arg>--pinentry-mode</arg>
                    <arg>loopback</arg>
                  </gpgArguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-release-plugin</artifactId>
            <version>2.5.3</version>
          </plugin>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.8</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>xspec-io.ossrh</serverId>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>true</autoReleaseAfterClose>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
